Added k8 to support existing integration tests
Added Docker Compose file to initiate Kubernetes cluster for existing
integration tests.

Added health check to kubernetes starter container to only start the
integration tests until the kubernetes cluster is fully initiated
with the pods deployed and running.

Refactored deployment manifest files to have better metaname
structure for the databases to support better Docker/Kubernetes
command line interface commands.

Refactored AbstractTestContainerSetup to support Docker and
Kubernetes with help of testcontainer and k3d integration.

Set specific version for kubectl on kubernetes-starter container
image to not cause incompatibilities between k3d's kubernetes version
and kubernetes client version.

Added seperate Kubernetes integration test to CI pipeline.

Migrated from MySQL to PostgreSQL with reafactored k8 database
manifest files.

Refactored the worldapi aka mockserver configuration to fit both
Docker integration tests and Kubernetes integration tests.

Updated Travis CI file to use newer JDK 11 version newer then 11.0.2
to resolve kubernetes client SSL issues with buggy JVM version.

Added time limit of 60 minutes to Travis CI execution of Docker and
Kubernetes integration tests since they take time to initiate the
tests.

--- a/deployment/security_postgres_volume.yaml
+++ b/deployment/security_postgres_volume.yaml
@@ -14,11 +14,14 @@
 # limitations under the License.
 #
 
-FROM openjdk:11-jre-slim
-
-COPY target/openbank-service-0.0.1-SNAPSHOT.jar /app/openbank-spring.jar
-
-EXPOSE 8443 8081 8000
-
-CMD ["sh", "-c", "java -jar /app/openbank-spring.jar --jasypt.encryptor.password=${MASTER_SECRET} \
---spring.config.location=${CONFIG_FILE_LOCATIONS}"]
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: security-postgres-data-disk
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
