--- a/service/src/main/resources/openbank_jpa.yaml
+++ b/service/src/main/resources/openbank_jpa.yaml
@@ -1,2 +1,2 @@
-openbank.jpa.databasePlatform: org.hibernate.dialect.MySQL8Dialect
-openbank.jpa.entityValidation: validate
+openbank.jpa.databasePlatform: org.hibernate.dialect.PostgreSQL94Dialect
+openbank.jpa.entityAction: validate
