--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,10 @@
 # limitations under the License.
 #
 
-dist: bionic
+dist: focal
 
 services:
   - docker
-
-language: java
-
-jdk:
-  - openjdk11
 
 cache:
   directories:
@@ -30,6 +25,14 @@ cache:
     - $HOME/.m2
 
 before_install:
+  - echo $JAVA_HOME
+  - which java
+  - sudo rm -rf /usr/local/lib/jvm/
+  - sudo apt-get install -y openjdk-11-jdk-headless
+  - export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64/
+  - which java
+  - java -version
+  - $JAVA_HOME/bin/java -version
   - echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
   - sudo curl -L https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
   - sudo chmod +x /usr/local/bin/docker-compose
@@ -42,25 +45,41 @@ before_install:
   - curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
   - sudo apt-add-repository "deb http://apt.kubernetes.io/ kubernetes-xenial main"
   - sudo apt-get update
-  - sudo apt-get install kubectl -y
+  - sudo apt-get install kubectl=1.20.1-00 -y
   - curl https://baltocdn.com/helm/signing.asc | sudo apt-key add -
   - sudo apt-get install apt-transport-https --yes
   - echo "deb https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
   - sudo apt-get update
   - sudo apt-get install helm -y
+  - sudo apt-get install apt-transport-https ca-certificates curl gnupg-agent software-properties-common wget -y
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+  - sudo apt-get install docker-ce docker-ce-cli containerd.io -y
+  - docker --version
+  - docker run hello-world
 
 jobs:
   include:
     - stage: build and run unit/system tests
-      script: mvn clean install
-    - stage: run integration tests
       script:
-        - docker-compose -f service/docker-compose.yaml build --force
-        - cd service && mvn test -Dtest=*IT && cd ..
-        - ./start_openbank_in_kubernetes_cluster.sh && ./test_openbank_deployment_in_kubernetes.sh
+        - travis_wait 30 mvn clean install
+    - stage: run integration tests in Docker
+      script:
+        - mvn clean install -DskipTests
+        - source setup_docker_integration_environment.sh
+        - docker-compose -f service/src/test/resources/docker-compose-int.yaml build --force
+        - travis_wait 30 cd service && mvn test -Dtest=*IT && cd ..
+    - stage: run integration tests in Kubernetes
+      script:
+        - source setup_kubernetes_integration_environment.sh
+        - docker-compose -f service/src/test/resources/docker-compose-k8-integration.yaml build --force
+        - travis_wait 60 cd service && mvn test -Dtest=*IT && cd ..
+        - docker rm -vf $(docker ps -a -q)
     - stage: push OpenBank to dockerhub on master branch after an merge
       if: branch = master
       script:
+        - mvn clean install -DskipTests
         - cd service && docker build -f Dockerfile --no-cache -t openbank-spring .
         - docker tag openbank-spring:latest jsquadab/openbank-spring:latest
         - docker push jsquadab/openbank-spring:latest
