--- a/deployment/openbank_spring.yaml
+++ b/deployment/openbank_spring.yaml
@@ -1,3 +1,19 @@
+#
+# Copyright 2021 JSquad AB
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -25,6 +41,11 @@ spec:
             - containerPort: 8081
               name: http
           env:
+            - name: WORLD_API_HOST_AND_PORT
+              valueFrom:
+                secretKeyRef:
+                  name: openbank-spring-secret
+                  key: WORLD_API_HOST_AND_PORT
             - name: MASTER_SECRET
               valueFrom:
                 secretKeyRef:
