--- a/deployment/securitydb.yaml
+++ b/deployment/securitydb.yaml
@@ -1,8 +1,24 @@
+#
+# Copyright 2021 JSquad AB
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: security-database-deployment
+  name: securitydb-deployment
   labels:
     name: securitydb
     zone: prod
@@ -18,28 +34,23 @@ spec:
     spec:
       containers:
         - name: securitydb
-          image: mysql:8.0.17
+          image: postgres:9.6.20
           ports:
-            - containerPort: 3306
+            - containerPort: 5432
           volumeMounts:
-            - name: security-mysql-data
-              mountPath: "/var/lib/mysql"
+            - name: security-postgres-data
+              mountPath: "/var/lib/postgresql/data"
           env:
-            - name: MYSQL_DATABASE
+            - name: POSTGRES_DB
               value: "security"
-            - name: MYSQL_USER
+            - name: POSTGRES_USER
               value: "security_user"
-            - name: MYSQL_PASSWORD
+            - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: openbank-spring-secret
                   key: SECURITY_PASSWORD
-            - name: MYSQL_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: openbank-spring-secret
-                  key: ROOT_PASSWORD
       volumes:
-        - name: security-mysql-data
+        - name: security-postgres-data
           persistentVolumeClaim:
-            claimName: security-mysql-data-disk
+            claimName: security-postgres-data-disk
