--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     </modules>
 
     <properties>
+        <awaitility.version>4.0.3</awaitility.version>
         <build.helper.maven.version>3.2.0</build.helper.maven.version>
         <exec.maven.plugin.version>3.0.0</exec.maven.plugin.version>
         <flywaydb.version>5.2.4</flywaydb.version>
@@ -40,7 +41,6 @@
         <jakarta.activation.version>1.2.1</jakarta.activation.version>
         <jasypt.spring.boot.starter.version>2.1.2</jasypt.spring.boot.starter.version>
         <java.version>1.11</java.version>
-        <jdk.version>11</jdk.version>
         <javax.inject.version>1</javax.inject.version>
         <jaxb.version>2.3.3</jaxb.version>
         <jaxb2.annotate.plugin.test.annox.annotations.version>1.0.0</jaxb2.annotate.plugin.test.annox.annotations.version>
@@ -49,18 +49,20 @@
         <jaxb2.fluent.api.version>3.0</jaxb2.fluent.api.version>
         <jaxb2.maven.plugin.version>2.5.0</jaxb2.maven.plugin.version>
         <jaxws.ri.version>2.3.0</jaxws.ri.version>
+        <jdk.version>11</jdk.version>
+        <kubernetes.client.version>11.0.0</kubernetes.client.version>
         <logcaptor.version>2.2.0</logcaptor.version>
         <lombok.version>1.18.16</lombok.version>
         <maven.antrun.plugin.version>1.8</maven.antrun.plugin.version>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <maven.surefire.version>2.22.2</maven.surefire.version>
-        <micrometer.version>1.3.2</micrometer.version>
-        <mockserver.version>5.7.0</mockserver.version>
+        <micrometer.version>1.6.2</micrometer.version>
+        <mockserver.version>5.11.1</mockserver.version>
         <mojo.jaxb2.version>2.5.0</mojo.jaxb2.version>
-        <mysql.connector.java.version>8.0.17</mysql.connector.java.version>
         <okhttp3.version>4.2.2</okhttp3.version>
+        <postgresql.version>42.2.18</postgresql.version>
         <rest.assured.version>4.0.0</rest.assured.version>
-        <spring.boot.version>2.2.12.RELEASE</spring.boot.version>
+        <spring.boot.version>2.3.7.RELEASE</spring.boot.version>
         <springdoc.openapi.version>1.1.49</springdoc.openapi.version>
         <testcontainers.junit.version>1.15.1</testcontainers.junit.version>
         <urm.version>1.4.8</urm.version>
@@ -120,9 +122,9 @@
                 <version>${jasypt.spring.boot.starter.version}</version>
             </dependency>
             <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>${mysql.connector.java.version}</version>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${postgresql.version}</version>
                 <scope>runtime</scope>
             </dependency>
             <dependency>
@@ -190,6 +192,18 @@
                 <groupId>io.github.hakky54</groupId>
                 <artifactId>logcaptor</artifactId>
                 <version>${logcaptor.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.kubernetes</groupId>
+                <artifactId>client-java</artifactId>
+                <version>${kubernetes.client.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.awaitility</groupId>
+                <artifactId>awaitility</artifactId>
+                <version>${awaitility.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
