--- a/service/src/test/resources/test/configuration/openbank_jpa.properties
+++ b/service/src/test/resources/test/configuration/openbank_jpa.properties
@@ -15,7 +15,7 @@
 #
 
 openbank.jpa.databasePlatform=org.hibernate.dialect.H2Dialect
-openbank.jpa.entityValidation=validate
+openbank.jpa.entityAction=validate
 openbank.jpa.databaseAction=drop-and-create
 openbank.jpa.secondaryLevelCache=true
 openbank.jpa.cacheRegionFactory=org.hibernate.cache.ehcache.EhCacheRegionFactory
