--- a/service/src/test/resources/test/configuration/security_jpa.properties
+++ b/service/src/test/resources/test/configuration/security_jpa.properties
@@ -15,7 +15,7 @@
 #
 
 security.jpa.databasePlatform=org.hibernate.dialect.H2Dialect
-security.jpa.entityValidation=validate
+security.jpa.entityAction=validate
 security.jpa.databaseAction=drop-and-create
 security.jpa.secondaryLevelCache=true
 security.jpa.cacheRegionFactory=org.hibernate.cache.ehcache.EhCacheRegionFactory
