Improved Docker/K8 integration tests
Refactored the yam files to have better numbering structure to
support Kubernetes integration tests better.

Refactored mockserver to be manifest yaml specific.

Removed mockserver environment variables from openbank-spring the
application shall talk to the mockserver pod/container with common
mockserver api port.

--- a/service/src/main/resources/configuration_local.yaml
+++ b/service/src/main/resources/configuration_local.yaml
@@ -16,7 +16,7 @@ server.ssl.key-store: classpath:ssl/keystore/jsquad.pfx
 server.ssl.key-store-password: ENC(M5JhYsUTMq6n1OKArpvF+TvuBjQTDO+/)
 server.ssl.enabled: true
 
-world.webclient.baseUrl: http://
+world.webclient.baseUrl: http://mockserver:1080
 
 management.endpoint:
   prometheus:
