--- a/service/src/test/resources/test/configuration/configuration_test.properties
+++ b/service/src/test/resources/test/configuration/configuration_test.properties
@@ -14,12 +14,12 @@
 # limitations under the License.
 #
 
-openbank.datasource.url=jdbc:h2:mem:openbankdb
+openbank.datasource.url=jdbc:h2:mem:openbankdb;DB_CLOSE_ON_EXIT=FALSE
 openbank.datasource.username=openbank_user
 openbank.datasource.password=openbank_password
 openbank.datasource.driverclassname=org.h2.Driver
 
-security.datasource.url=jdbc:h2:mem:securitydb
+security.datasource.url=jdbc:h2:mem:securitydb;DB_CLOSE_ON_EXIT=FALSE
 security.datasource.username=security_user
 security.datasource.password=security_password
 security.datasource.driverclassname=org.h2.Driver
