Added new production encryption keys
Added new encrypted property keys to be used by the CI environment
and by future cloud service and the new production master key
to be able to decrypt the secret property keys for security database,
openbank database, ssl client/server that CI/cloud environment is only
aware of.

Updated Testcontainers to version 1.15.2.

Refactored the SSL encrypted string to be able to execute integration
tests locally and for the test production environment.

--- a/deployment/10_openbank_spring.yaml
+++ b/deployment/10_openbank_spring.yaml
@@ -47,4 +47,4 @@ spec:
                   name: openbank-spring-secret
                   key: MASTER_KEY
             - name: CONFIG_FILE_LOCATIONS
-              value: "classpath:application.properties,classpath:configuration_local.yaml,classpath:activemq.properties,classpath:openbank_jpa.yaml,classpath:security_jpa.yaml"
+              value: "classpath:application.properties,classpath:configuration_prod.yaml,classpath:activemq.properties,classpath:openbank_jpa.yaml,classpath:security_jpa.yaml"
