Improved validation logic of file changes
Improved the validation logic for SQL file changes and pipeline
changes. So when both feature branch and master branch has SQL file
changes or when master branch has pipeline file changes, then rebase
of the feature branch is necessary.

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ jobs:
         - travis_wait 60 mvn clean install
     - stage: verify feature branch is not behind master branch with SQL file changes or pipeline changes
       script:
-        - ./verify_sql_pipeline_changes_against_master_branch "${TRAVIS_BRANCH}"
+        - ./verify_sql_and_pipeline_changes.sh "${TRAVIS_BRANCH}"
     - stage: run database migration validation against SQL files
       script:
         - ./flyway_sql_validation.sh
